--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "weather-services",
+  "homepage": "https://jeffjhoyt.github.io/weather-services",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -42,7 +43,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jeffjhoyt.github.io/weather-services",
   "devDependencies": {
     "gh-pages": "^5.0.0"
   }
